--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
 		<!--Google.guava Version-->
 		<com.guava.version>23.0</com.guava.version>
 		<!--org.freemarker Version-->
-		<org.freemarker.version>2.3.23</org.freemarker.version>
+		<org.freemarker.version>2.3.28</org.freemarker.version>
 		<!--Common.io Version-->
 		<commons.io.version>2.6</commons.io.version>
 		<!--Common.lang3 Version-->
@@ -123,11 +123,16 @@
 			<artifactId>spring-cloud-starter-config</artifactId>
 		</dependency>
 
-		<!--org-->
-		<dependency>
+		<!--freemarker-->
+		<!--<dependency>
 			<groupId>org.freemarker</groupId>
 			<artifactId>freemarker</artifactId>
 			<version>${org.freemarker.version}</version>
+		</dependency>-->
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-freemarker</artifactId>
 		</dependency>
 
 		<!--MySQL-->
