--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,8 @@
         <common.lang3.version>3.8</common.lang3.version>
         <!--Commons.codec Version-->
         <commons.codec.version>1.11</commons.codec.version>
+        <!--Commons.http.client Version-->
+        <commons.http.client.version>4.5.6</commons.http.client.version>
         <!--Common.collections Version-->
         <commons.collections.version>4.2</commons.collections.version>
         <!--Spring Boot Version-->
@@ -190,6 +192,11 @@
             <groupId>commons-codec</groupId>
             <artifactId>commons-codec</artifactId>
             <version>${commons.codec.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>${commons.http.client.version}</version>
         </dependency>
 
         <!--swagger2-->
