--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,10 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <!--Maven plugins-->
         <mvn.plugins.maven-compiler.version>3.8.0</mvn.plugins.maven-compiler.version>
+        <!--Dockerfile plugins-->
+        <docker.plugins.dockerfile-build>1.4.5</docker.plugins.dockerfile-build>
+        <!--Docker Repository Base Name-->
+        <parent.docker.repository.base>itumate</parent.docker.repository.base>
     </properties>
 
     <dependencyManagement>
@@ -234,6 +238,12 @@
                     <groupId>org.springframework.boot</groupId>
                     <artifactId>spring-boot-maven-plugin</artifactId>
                     <version>${spring-boot.version}</version>
+                </plugin>
+                <!--Dockerfile插件-->
+                <plugin>
+                    <groupId>com.spotify</groupId>
+                    <artifactId>dockerfile-maven-plugin</artifactId>
+                    <version>${docker.plugins.dockerfile-build}</version>
                 </plugin>
             </plugins>
         </pluginManagement>
