--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,7 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <!--Maven plugins-->
         <mvn.plugins.maven-compiler.version>3.8.0</mvn.plugins.maven-compiler.version>
+        <mvn.plugins.source-compiler.version>3.0.1</mvn.plugins.source-compiler.version>
         <!--Dockerfile plugins-->
         <docker.plugins.dockerfile-build>1.4.5</docker.plugins.dockerfile-build>
     </properties>
@@ -275,7 +276,9 @@
             </plugin>
             <!-- 发布源码 -->
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-source-plugin</artifactId>
+                <version>${mvn.plugins.source-compiler.version}</version>
                 <configuration>
                     <attach>true</attach>
                 </configuration>
@@ -291,18 +294,30 @@
         </plugins>
     </build>
 
-    <!--发布本地私服使用-->
+    <!--发布aliyun私服-->
     <distributionManagement>
         <repository>
             <id>releases</id>
-            <url>http://${deploy.host}:${deploy.port}/nexus/content/repositories/releases/</url>
+            <url>https://repo.rdc.aliyun.com/repository/69112-release-5uMTYP/</url>
         </repository>
         <!--快照版本，发布快照版本不使用该标签会报权限问题-->
         <snapshotRepository>
             <id>snapshots</id>
-            <url>http://${deploy.host}:${deploy.port}/nexus/content/repositories/snapshots/</url>
+            <url>https://repo.rdc.aliyun.com/repository/69112-snapshot-CJES1m/</url>
         </snapshotRepository>
     </distributionManagement>
+
+    <!-- localhost -->
+    <!--<distributionManagement>
+        <repository>
+            <id>releases</id>
+            <url>http://${deploy.host}:${deploy.port}/nexus/content/repositories/releases/</url>
+        </repository>
+        <snapshotRepository>
+            <id>snapshots</id>
+            <url>http://${deploy.host}:${deploy.port}/nexus/content/repositories/snapshots/</url>
+        </snapshotRepository>
+    </distributionManagement>-->
 
     <repositories>
         <repository>
