--- a/pom.xml
+++ b/pom.xml
@@ -293,27 +293,14 @@
     <!--发布aliyun私服-->
     <distributionManagement>
         <repository>
-            <id>releases</id>
+            <id>rdc-releases</id>
             <url>https://repo.rdc.aliyun.com/repository/69112-release-5uMTYP/</url>
         </repository>
-        <!--快照版本，发布快照版本不使用该标签会报权限问题-->
         <snapshotRepository>
-            <id>snapshots</id>
+            <id>rdc-snapshots</id>
             <url>https://repo.rdc.aliyun.com/repository/69112-snapshot-CJES1m/</url>
         </snapshotRepository>
     </distributionManagement>
-
-    <!-- localhost -->
-    <!--<distributionManagement>
-        <repository>
-            <id>releases</id>
-            <url>http://${deploy.host}:${deploy.port}/nexus/content/repositories/releases/</url>
-        </repository>
-        <snapshotRepository>
-            <id>snapshots</id>
-            <url>http://${deploy.host}:${deploy.port}/nexus/content/repositories/snapshots/</url>
-        </snapshotRepository>
-    </distributionManagement>-->
 
     <repositories>
         <repository>
