--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,9 @@
         <docker.plugins.dockerfile-build>1.4.5</docker.plugins.dockerfile-build>
         <!--Spring-->
         <spring.tx>5.0.7.RELEASE</spring.tx>
+
+        <!--tools-->
+        <lombok.version>1.18.8</lombok.version>
     </properties>
 
     <dependencyManagement>
@@ -233,6 +236,14 @@
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
             <version>${com.guava.version}</version>
+        </dependency>
+
+        <!--tools-->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>${lombok.version}</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 
